--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "lint:prettier": "prettier . --check",
     "lint:eslint": "eslint . --ext .js,.ts",
     "lint:tsc": "tsc --noEmit --incremental false",
+    "postinstall": "patch-package",
     "test": "jest"
   },
   "dependencies": {
     "comment-parser": "^1.3.1",
+    "patch-package": "^6.4.7",
     "ts-structure-parser": "^0.0.19"
   },
   "devDependencies": {
