--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@protobuf-ts/protoc": "^2.7.0",
     "comment-parser": "^1.3.1",
     "patch-package": "^6.4.7",
+    "protobufjs": "^7.0.0",
+    "protobufjs-cli": "^1.0.0",
     "ts-structure-parser": "^0.0.19"
   },
   "devDependencies": {
