--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "scripts": {
     "audit": "audit-ci",
     "build": "rimraf lib && tsc",
+    "dev": "yarn ts-node ./src/index",
     "lint": "yarn lint:prettier && yarn lint:eslint && yarn lint:tsc",
     "lint:prettier": "prettier . --check",
     "lint:eslint": "eslint . --ext .js,.ts",
