--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@protobuf-ts/protoc": "^2.7.0",
+    "as-proto": "^0.4.0",
     "comment-parser": "^1.3.1",
     "patch-package": "^6.4.7",
     "protobufjs": "^7.0.0",
