--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@protobuf-ts/protoc": "^2.7.0",
     "as-proto": "^0.4.0",
     "comment-parser": "^1.3.1",
+    "fs-extra": "^10.1.0",
     "patch-package": "^6.4.7",
     "protobufjs": "^7.0.0",
     "protobufjs-cli": "^1.0.0",
@@ -36,6 +37,7 @@
   },
   "devDependencies": {
     "@tsconfig/node12": "^1.0.9",
+    "@types/fs-extra": "^9.0.13",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.10",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
