--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/node": "^17.0.10",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
+    "as-proto-gen": "^0.4.0",
     "audit-ci": "^5.1.2",
     "eslint": "^8.7.0",
     "eslint-config-airbnb-typescript": "^16.1.0",
