--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@koinos/sdk-as": "^0.4.3",
     "@protobuf-ts/protoc": "^2.7.0",
     "as-proto": "^0.4.0",
+    "assemblyscript": "^0.19.22",
     "comment-parser": "^1.3.1",
     "fs-extra": "^10.1.0",
     "patch-package": "^6.4.7",
