--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@protobuf-ts/protoc": "^2.7.0",
     "as-proto": "^0.4.0",
+    "commander": "^9.4.0",
     "comment-parser": "^1.3.1",
     "fs-extra": "^10.1.0",
     "patch-package": "^6.4.7",
