--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "koinos-precompiler-as",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "generator of main.ts file and ABI for smart contracts in koinos",
   "author": "Julian Gonzalez",
   "repository": {
@@ -14,6 +14,9 @@
     "dist"
   ],
   "main": "./dist/index.js",
+  "bin": {
+    "koinos-precompiler-as": "bin/koinos-precompiler-as"
+  },
   "scripts": {
     "audit": "audit-ci",
     "build": "rimraf lib && tsc",
