--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   },
   "dependencies": {
     "@protobuf-ts/protoc": "^2.7.0",
-    "as-proto": "^0.4.0",
+    "as-proto": "npm:@koinos/as-proto@1.0.0",
     "commander": "^9.4.0",
     "comment-parser": "^1.3.1",
     "fs-extra": "^10.1.0",
