--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "koinos-precompiler-as",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "generator of main.ts file and ABI for smart contracts in koinos",
   "author": "Julian Gonzalez",
   "repository": {
@@ -26,7 +26,6 @@
     "lint:prettier": "prettier . --check",
     "lint:eslint": "eslint . --ext .js,.ts",
     "lint:tsc": "tsc --noEmit --incremental false",
-    "postinstall": "patch-package",
     "test": "jest"
   },
   "dependencies": {
@@ -35,10 +34,9 @@
     "commander": "^9.4.0",
     "comment-parser": "^1.3.1",
     "fs-extra": "^10.1.0",
-    "patch-package": "^6.4.7",
+    "koinos-ts-structure-parser": "^0.0.20",
     "protobufjs": "^7.0.0",
-    "protobufjs-cli": "^1.0.0",
-    "ts-structure-parser": "^0.0.19"
+    "protobufjs-cli": "^1.0.0"
   },
   "devDependencies": {
     "@tsconfig/node12": "^1.0.9",
