--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "lint:prettier": "prettier . --check",
     "lint:eslint": "eslint . --ext .js,.ts",
     "lint:tsc": "tsc --noEmit --incremental false",
-    "test": "jest"
+    "test:precompile": "yarn ts-node ./src/cli.ts testProject",
+    "test:asbuild": "asc testProject/build/index.ts --config testProject/asconfig.json --use abort= --target release",
+    "test:build": "yarn test:precompile && yarn test:asbuild"
   },
   "dependencies": {
     "@protobuf-ts/protoc": "^2.7.0",
@@ -40,6 +42,7 @@
     "protobufjs-cli": "^1.0.0"
   },
   "devDependencies": {
+    "@koinos/sdk-as": "^0.4.5",
     "@tsconfig/node12": "^1.0.9",
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "^27.4.0",
@@ -47,6 +50,7 @@
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
     "as-proto-gen": "^0.4.0",
+    "assemblyscript": "^0.19.22",
     "audit-ci": "^5.1.2",
     "eslint": "^8.7.0",
     "eslint-config-airbnb-typescript": "^16.1.0",
