--- a/package.json
+++ b/package.json
@@ -37,12 +37,13 @@
     "commander": "^9.4.0",
     "comment-parser": "^1.3.1",
     "fs-extra": "^10.1.0",
-    "koinos-ts-structure-parser": "^0.0.21",
+    "koinos-ts-structure-parser": "^0.1.1",
     "protobufjs": "^7.0.0",
     "protobufjs-cli": "^1.0.0"
   },
   "devDependencies": {
     "@koinos/sdk-as": "^0.4.5",
+    "@koinosbox/contracts": "^1.0.12",
     "@tsconfig/node12": "^1.0.9",
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "^27.4.0",
